--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,11 +6,18 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>JavaScript - Chapter 10</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript" src="assign.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <form id="book">
+            <div id="panel">
+                <input id="title" type="text"><br>
+                <input id="author" type="text">
+                <input type="submit" value="Submit">
+            </div>
+        </form>        
     </body>
 </html>
