--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,14 +9,15 @@ and open the template in the editor.
         <title>JavaScript - Chapter 10</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="assign.js"></script>
+        <script type="text/javascript" src="poll.js"></script>
     </head>
     <body>
-        <form id="book">
-            <div id="panel">
-                <input id="title" type="text"><br>
-                <input id="author" type="text">
-                <input type="submit" value="Submit">
+        <form id="pizza" action="echo.pl" method="POST">
+            <div id="panel">Pizza Topping?
+                <input type="checkbox" name="Topping" value="Cheese">Cheese
+                <input type="checkbox" name="Topping" value="Hame">Ham
+                <input type="checkbox" name="Topping" value="Peppers">Peppers
+                <input type="button" id="btn" value="Confirm Choices">
             </div>
         </form>        
     </body>
