--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,15 +9,19 @@ and open the template in the editor.
         <title>JavaScript - Chapter 10</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="poll.js"></script>
+        <script type="text/javascript" src="select.js"></script>
     </head>
     <body>
-        <form id="pizza" action="echo.pl" method="POST">
-            <div id="panel">Pizza Topping?
-                <input type="checkbox" name="Topping" value="Cheese">Cheese
-                <input type="checkbox" name="Topping" value="Hame">Ham
-                <input type="checkbox" name="Topping" value="Peppers">Peppers
-                <input type="button" id="btn" value="Confirm Choices">
+        <form action="echo.pl" method="POST">
+            <div id="panel">
+                <select id="cityList" name="City">
+                    <option value ="London">London</option>
+                    <option value ="New York">New York</option>
+                    <option value ="Paris">Paris</option>
+                    <option value ="Dubai">Dubai</option>
+                    <option value ="Sydney">Sydney</option>
+                </select>
+                <input type="submit">
             </div>
         </form>        
     </body>
