--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,20 +9,13 @@ and open the template in the editor.
         <title>JavaScript - Chapter 10</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="select.js"></script>
+        <script type="text/javascript" src="change.js"></script>
     </head>
     <body>
-        <form action="echo.pl" method="POST">
-            <div id="panel">
-                <select id="cityList" name="City">
-                    <option value ="London">London</option>
-                    <option value ="New York">New York</option>
-                    <option value ="Paris">Paris</option>
-                    <option value ="Dubai">Dubai</option>
-                    <option value ="Sydney">Sydney</option>
-                </select>
-                <input type="submit">
-            </div>
+        <form id="lang" action="echo.pl" method="POST">
+            <input id="txt" type="text" size="30" value="JavaScript">
+            <input type="reset">
         </form>        
+        <div id="panel"></div>
     </body>
 </html>
